--- a/WK6/ex1/photo-shoot-effect.css
+++ b/WK6/ex1/photo-shoot-effect.css
@@ -1,3 +1,10 @@
+@import
+"https://fonts.googleapis.com/css?family=Lato:300,400,900";
+* {
+margin: 0;
+padding: 0;
+}
+
 body {
     width: 960px;
     text-align: center;
