--- a/WK6/ex1/photo-shoot-effect.css
+++ b/WK6/ex1/photo-shoot-effect.css
@@ -21,12 +21,14 @@ h1 {
     font-size: 50px;
     padding: 10px 0 0;
     text-align: center;
+    text-transform: uppercase
 }
 
 h2 {
     font-size: 40px;
     letter-spacing: 15px;
     text-align: center;
+    text-transform: uppercase;
     border-bottom: 3px solid #416371;
     padding-bottom: 20px;
 }
