--- a/WK6/ex1/photo-shoot-effect.css
+++ b/WK6/ex1/photo-shoot-effect.css
@@ -6,43 +6,58 @@ padding: 0;
 }
 
 body {
-    width: 960px;
-    text-align: center;
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     font-family: Arial, sans-serif;
     color: #fcfcfc;
     background-color: #355664;
 }
 
 h1, h2, h3 {
-    font-family: Arial, forte, sans-serif;
+    font-family: 'Lobster', 'Comic Sans MS', cursive, Arial, forte, sans-serif;
 }
 
 h1 {
-    font-size: 50px;
-    padding: 10px 0 0;
-    text-align: center;
-    text-transform: uppercase
+    font-size: 60px;
+    padding: 30px 0 0 0;
+    text-align: left;
+    text-transform: uppercase;
+    font-family: 'Lobster', 'Comic Sans MS', cursive, Arial, forte, sans-serif;
+    margin-left: 30px;
+    letter-spacing: 2px;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 38px;
     letter-spacing: 15px;
     text-align: center;
     text-transform: uppercase;
     border-bottom: 3px solid #416371;
     padding-bottom: 20px;
+    font-family: 'Lobster', 'Comic Sans MS', cursive, Arial, forte, sans-serif;
+    margin-bottom: 20px;
 }
 
 h3 {
     text-align: right;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: normal;
-    margin: 0 0 10px;;
+    margin: -40px 40px 10px 0;
+    font-family: 'Lobster', 'Comic Sans MS', cursive, Arial, forte, sans-serif;
+    color: #fcfcfc;
 }
 
 p {
     line-height: 20px;
     padding-bottom: 5px;
+    color: #94c258;
+}
+
+figure + p {
     color: #94c258;
 }
 
@@ -59,10 +74,17 @@ div.article-content {
 nav {
     background: #355664;
     padding: 0 5px;
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: left;
 }
 
+nav ul {
+    margin-left: 30px;
+}
 nav ul li {
     display: inline-block;
+    margin-right: 10px;
 }
 
 nav ul li a {
@@ -72,18 +94,22 @@ nav ul li a {
     margin: 5px 2px;
     padding: 7px 10px 4px;
     text-transform: uppercase;
+    border-bottom: 2px solid #fff;
+    text-decoration: none;
 }
 
 nav ul li:first-of-type > a {
     color: #7CB3E9;
     font-size: 30px;
     text-transform: lowercase;
+    border-bottom: 2px solid #7CB3E9;
 }
 
 nav ul a[title="sweet tabs"] {
     color: #8EC45B;
     font-size: 30px;
     text-transform: none;
+    border-bottom: 2px solid #8EC45B;
 }
 
 nav,article,nav ul li a,figure {
@@ -95,6 +121,10 @@ article {
     margin: 0 0 10px;
     padding: 20px;
     height: 390px;
+    width: 90%;
+    max-width: 1100px;
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
 }
 
 figure {
@@ -111,4 +141,6 @@ footer {
     margin-bottom: 30px;
     text-align: center;
     font-size: 20px;
+    width: 100%;
+    color: #fcfcfc;
 }
